[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Back_button" type="Button" parent="CanvasLayer"]
margin_left = 106.0
margin_top = 375.0
margin_right = 148.0
margin_bottom = 395.0
text = "Back"

[node name="Room_ip_text" type="Label" parent="CanvasLayer"]
margin_left = 2.0
margin_top = 37.0
margin_right = 56.0
margin_bottom = 51.0
text = "Room Ip"

[node name="Nb_players_text" type="Label" parent="CanvasLayer"]
margin_left = 26.0
margin_top = 114.0
margin_right = 133.0
margin_bottom = 128.0
text = "Number of users"

[node name="Start_button" type="Button" parent="CanvasLayer"]
margin_left = 426.0
margin_top = 245.0
margin_right = 509.0
margin_bottom = 265.0
text = "Start Game"

[connection signal="pressed" from="CanvasLayer/Back_button" to="." method="_on_Back_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Start_button" to="." method="_on_Start_button_pressed"]
